Actions
Bug #10322
closedBug #10011: stop building and shipping lint libraries
usr/lib/libc - remove lint and lint libraries
Start date:
2019-01-30
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:
Updated by Andy Fiddaman about 4 years ago
Updated by Andy Fiddaman almost 4 years ago
- Status changed from In Progress to Pending RTI
- % Done changed from 0 to 100
Updated by Electric Monk almost 4 years ago
- Status changed from Pending RTI to Closed
git commit 09e2ab34f6c69b170fe7478e8b011d6bb505e0d9
commit 09e2ab34f6c69b170fe7478e8b011d6bb505e0d9 Author: Andy Fiddaman <omnios@citrus-it.co.uk> Date: 2019-02-07T19:45:33.000Z 10322 usr/lib/libc - remove lint and lint libraries Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Jason King <jason.king@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions