10322 usr/lib/libc - remove lint and lint libraries Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Jason King <jason.king@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>