usr/src/lib/libc/sparcv9/Makefile.com
@@ -26,6 +26,7 @@
 # Copyright (c) 2013, OmniTI Computer Consulting, Inc. All rights reserved.
 # Copyright 2013 Garrett D'Amore <garrett@damore.org>
 # Copyright 2018 Nexenta Systems, Inc.
+# Copyright 2019 OmniOS Community Edition (OmniOSce) Association.
 #
 
 LIBCDIR=	$(SRC)/lib/libc
@@ -1115,41 +1116,6 @@ CLEANFILES=			\
 
 CLOBBERFILES +=	$(LIB_PIC)
 
-# list of C source for lint
-SRCS=							\
-	$(ATOMICOBJS:%.o=$(SRC)/common/atomic/%.c)	\
-	$(XATTROBJS:%.o=$(SRC)/common/xattr/%.c)	\
-	$(COMOBJS:%.o=$(SRC)/common/util/%.c)		\
-	$(PORTFP:%.o=$(LIBCDIR)/port/fp/%.c)		\
-	$(PORTGEN:%.o=$(LIBCDIR)/port/gen/%.c)		\
-	$(PORTI18N:%.o=$(LIBCDIR)/port/i18n/%.c)	\
-	$(PORTINET:%.o=$(LIBCDIR)/port/inet/%.c)	\
-	$(PORTLOCALE:%.o=$(LIBCDIR)/port/locale/%.c)	\
-	$(PORTPRINT:%.o=$(LIBCDIR)/port/print/%.c)	\
-	$(PORTREGEX:%.o=$(LIBCDIR)/port/regex/%.c)	\
-	$(PORTSTDIO:%.o=$(LIBCDIR)/port/stdio/%.c)	\
-	$(PORTSYS:%.o=$(LIBCDIR)/port/sys/%.c)		\
-	$(AIOOBJS:%.o=$(LIBCDIR)/port/aio/%.c)		\
-	$(RTOBJS:%.o=$(LIBCDIR)/port/rt/%.c)		\
-	$(SECFLAGSOBJS:%.o=$(SRC)/common/secflags/%.c)	\
-	$(TPOOLOBJS:%.o=$(LIBCDIR)/port/tpool/%.c)	\
-	$(THREADSOBJS:%.o=$(LIBCDIR)/port/threads/%.c)	\
-	$(THREADSMACHOBJS:%.o=$(LIBCDIR)/$(MACH)/threads/%.c) \
-	$(UNICODEOBJS:%.o=$(SRC)/common/unicode/%.c)	\
-	$(UNWINDMACHOBJS:%.o=$(LIBCDIR)/port/unwind/%.c) \
-	$(FPOBJS:%.o=$(LIBCDIR)/$(MACH)/fp/%.c)		\
-	$(FPOBJS64:%.o=$(LIBCBASE)/fp/%.c)		\
-	$(LIBCBASE)/crt/_ftou.c				\
-	$(LIBCBASE)/gen/_xregs_clrptr.c			\
-	$(LIBCBASE)/gen/byteorder.c			\
-	$(LIBCBASE)/gen/endian.c			\
-	$(LIBCBASE)/gen/ecvt.c				\
-	$(LIBCBASE)/gen/getctxt.c			\
-	$(LIBCBASE)/gen/makectxt.c			\
-	$(LIBCBASE)/gen/siginfolst.c			\
-	$(LIBCBASE)/gen/siglongjmp.c			\
-	$(LIBCBASE)/gen/swapctxt.c
-
 # conditional assignments
 $(DYNLIB) := CRTI = crti.o
 $(DYNLIB) := CRTN = crtn.o
@@ -1265,18 +1231,6 @@ pics/getenv.o := sparcv9_COPTFLAG = -xO4
 .KEEP_STATE:
 
 all: $(LIBS) $(LIB_PIC)
-
-lint	:=	CPPFLAGS += -I$(LIBCDIR)/$(MACH)/fp
-lint	:=	CPPFLAGS += -D_MSE_INT_H -D_LCONV_C99
-lint	:=	LINTFLAGS64 += -mn
-
-lint:
-	@echo $(LINT.c) ... $(LDLIBS)
-	@$(LINT.c) $(SRCS) $(LDLIBS)
-
-$(LINTLIB):= SRCS=$(LIBCDIR)/port/llib-lc
-$(LINTLIB):= CPPFLAGS += -D_MSE_INT_H
-$(LINTLIB):= LINTFLAGS64=-nvx -m64
 
 # object files that depend on inline template
 $(TIL:%=pics/%): $(LIBCBASE)/threads/sparcv9.il
